--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>Leaflet.label</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.2.1</version>
     <name>Leaflet.label</name>
     <description>WebJar for Leaflet.label</description>
     <url>http://webjars.org</url>
@@ -53,7 +53,7 @@
         <url>http://github.com/webjars/Leaflet.label</url>
         <connection>scm:git:https://github.com/webjars/Leaflet.label.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/Leaflet.label.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>Leaflet.label-0.2.1</tag>
     </scm>
     
     <dependencies>
